fix contrast

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -458,5 +458,5 @@ main {
   }
 
   #more {
-    color: rgb(76, 1, 1);
+    color: rgb(36, 0, 0);
   }
